k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shoonya-web
  labels:
    app: shoonya-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: shoonya-web
  template:
    metadata:
      labels:
        app: shoonya-web
    spec:
      containers:
        - name: shoonya-web-container
          imagePullPolicy: Always
          image: shoonyaregistry.azurecr.io/shoonya-backend:latest
          ports:
          - containerPort: 8000
      imagePullSecrets:
        - name: shoonya-secrets
