k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shoonya-web
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: shoonya-web
